# word-count

./: .gitignore  Cargo.toml  README.md  results.txt
src/: lib.rs  main.rs
