[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"
name = "word-count"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
clap = "2.33.3"
rand = "0.7.3"
rayon = "1.4.1"
serde = "1.0.116"
serde_json = "1.0.58"
unbytify = "0.2.0"
words = "0.1.2"
